# SmartShop_Assistant

./: .gitignore  README.md  main.py  pyproject.toml
app/config/: settings.py
app/db/: smartshop_assistant.db  sqllite_init.py
app/db/images/: sunnglasses.avif
app/llm/: llm_client.py  vector.py
app/llm/tools/: facebook_post.py  product_search.py  sql_tool.py
app/static/: style.css
app/templates/: base.html  owner_new_product.html  owner_products.html
test/: test_llm.py  test_vector.py
