[project]
name = "SmartShop_Assistant"
version = "0.1.0"
description = "AI ecommerce chatbot with RAG, SQL tools, and virtual try-on"
requires-python = ">=3.11"

dependencies = [
    "langchain",
    "openai",
    "python-dotenv",
    "faiss-cpu",
    "pandas",
    "requests",
    "langsmith",
    "notebook>=7.5.3",
    "langchain-huggingface>=1.2.0",
    "transformers>=4.57.6",
    "torch>=2.10.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "tenacity>=9.1.3",
    "loguru>=0.7.3",
    "chromadb>=1.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.7",
]




[tool.uv.workspace]
members = [
    "SmartShop_Assistant",
]




[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
